--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -13,6 +13,9 @@
             </p>
         </li>
     </ul>
+    <p>
+        Sub Total: <span th:text="${subTotal}"></span> €
+    </p>
     <a href="#">Checkout</a>
 </body>
 </html>
