Added a login link

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -16,6 +16,9 @@
         <li>
             <a th:href="@{/purchase/cart}">Cart</a>
         </li>
+        <li>
+            <a th:href="@{/login}">Login</a>
+        </li>
     </ul>
 </body>
 </html>
