Added first checkout steps

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -21,6 +21,6 @@
     <p>
         Sub Total: <span th:text="${subTotal}"></span> €
     </p>
-    <a href="#">Checkout</a>
+    <a th:href="@{/checkout/checkout1}">Checkout</a>
 </body>
 </html>
