--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,6 +19,9 @@
         <li>
             <a th:href="@{/login}">Login</a>
         </li>
+        <li>
+            <a th:href="@{/logout}">Logout</a>
+        </li>
     </ul>
 </body>
 </html>
