--- a/src/main/resources/templates/checkout2.html
+++ b/src/main/resources/templates/checkout2.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="layout :: head"></head>
 <body>
+    <ul th:replace="layout :: nav"></ul>
     <h1>Checkout</h1>
     <h2>Products in Cart</h2>
     <ul>
