Added flash message to PurchaseController "update" method and "cart" template

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout :: head"></head>
 <body>
+    <div th:replace="layout :: flash"></div>
     <ul th:replace="layout :: nav"></ul>
     <h1>Products in Cart</h1>
     <ul>
