Added "empty cart" link to cart template

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -22,6 +22,7 @@
     <p>
         Sub Total: <span th:text="${subTotal}"></span> €
     </p>
+    <a th:href="@{/purchase/cart/empty}">Empty Cart</a>
     <a th:href="@{/checkout/checkout1}">Checkout</a>
 </body>
 </html>
